# otel-multivariate-time-series

./: Cargo.toml  README.md  README2.md
examples/: dataset.rs  generic_attr_trace_example.rs  http_transaction.rs  json_trace.rs  metrics.rs  metrics_benchmark.rs  metrics_example.rs  otel_v1_trace_example.rs  pref_v1.rs  profiler.rs  specialized_attr_trace.rs  specialized_attr_trace_example.rs  trace_benchmark.rs  trace_with_schema_example.rs  trace_without_schema.rs  trace_without_schema_example.rs
examples/otel_arrow/: metrics.rs
examples/otel_columnar/: metrics.rs
examples/otel_event/: metrics.rs
examples/otel_v1/: metrics.rs
images/: OTEL - Benchmark Overview.html
proto/opentelemetry/proto/arrow_events/v1/: events.proto
proto/opentelemetry/proto/events/v1/: events.proto
proto/opentelemetry/proto/metrics/v1/: metrics.proto
src/: build.rs  error.rs  event.rs  lib.rs  main.rs  metrics_columnar.rs  metrics_std.rs  multivariate_ts_gen.rs  native_trace.rs  serializer.rs
