[package]
name = "otel-multivariate-time-series"
version = "0.1.0"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2018"

build = "src/build.rs"

[dependencies]
prost = "0.7"
prost-types = "0.7"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version="0.4", features = ["serde"]}
flate2 = "1.0.20"
bytes = "1.0.1"
plotters = "0.3"
thiserror = "1.0"
erased-serde = "0.3"

[build-dependencies]
prost-build = { version = "0.7" }