[package]
name = "otel-multivariate-time-series"
version = "0.1.0"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2018"

build = "src/build.rs"

[dependencies]
prost = "0.8"
prost-types = "0.8"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version="0.4", features = ["serde"]}
flate2 = "1.0.20"
bytes = "1.0.1"
plotters = "0.3"
thiserror = "1.0"
erased-serde = "0.3"
arrow = "4"
jemalloc-ctl = "0.1.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[build-dependencies]
prost-build = { version = "0.7" }